[package]
name = "baka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
softbuffer = "0.4"
soloud = "1.0.5"
tiny-skia = "0.11"
winit = "0.29"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
strip = true
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
